--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
    <div class="ping-group">
      <label for="number">Enter your number here:</label>
      <input id="number" type="text">
-     <button type="submit" class="btn">ping-pong!</button>
+     <button type="submit" class="btn">pingpong!</button>
    </div>
  </form>
  <br><br>
  <h3 class="results">Here's your results!</h3>
- <ul id="results">
+ <ul id="output">
  </ul>
 </div>
 </div>
